# perspectiverse

./: .gitignore  FILES.md  LICENSE  README.md  index.html  package.json  pyproject.toml
.github/workflows/: security-audit.yml
data_engineering/: README.md
data_engineering/data_sources/: README.md
data_final/: README.md
documentation/: Project Architecture_ Discourse Universe.md  UI & 3D Implementation Canvas_ Perspectiverse.md
pipeline/: run_pipeline.py
project_documentation/: Technical Implementation Canvas.md
public/: data.json
scripts/: security_check.sh
src/: App.jsx
