[project]
name = "perspectiverse"
version = "0.1.0"
description = "Live mapping the universe of human attention and perspectives"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "User"}
]

dependencies = [
    "atproto>=0.0.1",
    "pandas>=2.0.0",
    "bertopic>=0.16.0",
    "ollama>=0.1.0",
    "numpy>=1.24.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "bandit>=1.7.5",
    "pip-audit>=2.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
